RESOLVED FIXED145714
Fix refacto, don't put IndexedDB databases in the cache directory
https://bugs.webkit.org/show_bug.cgi?id=145714
Summary Fix refacto, don't put IndexedDB databases in the cache directory
Anders Carlsson
Reported 2015-06-05 14:32:48 PDT
Fix refacto, don't put IndexedDB databases in the cache directory
Attachments
Patch (1.49 KB, patch)
2015-06-05 14:33 PDT, Anders Carlsson
koivisto: review+
Anders Carlsson
Comment 1 2015-06-05 14:33:12 PDT
Anders Carlsson
Comment 2 2015-06-05 14:42:53 PDT
Note You need to log in before you can comment on or make changes to this bug.