Fix refacto, don't put IndexedDB databases in the cache directory https://bugs.webkit.org/show_bug.cgi?id=145714

Reviewed by Antti Koivisto.

* UIProcess/API/Cocoa/APIWebsiteDataStoreCocoa.mm:
(API::WebsiteDataStore::defaultIndexedDBDatabaseDirectory):

Canonical link: https://commits.webkit.org/163744@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@185265 268f45cc-cd09-0410-ab3c-d52691b4dbfc